# tree-style-menu-django

./: README.md  gen-requirements.sh  menu-dump.json  pyproject.toml  task.md  user.json
backend/: pytest.ini
backend/config/: settings.py  urls.py
backend/index/: __init__.py  index.py
backend/menu/: __init__.py  admin.py  managers.py  menu.py  models.py  urls.py  views.py
backend/menu/migrations/: 0001_initial.py  0002_alter_menu_href.py  0002_alter_menu_name.py
backend/menu/templatetags/: menu_tags.py
backend/static/: index.css  index.js  index.ts  styles.css
backend/static/js/menu/: index.js  renderLinks.js  renderLinks.ts  renderMenu.js  renderMenu.ts
backend/static/js/utils/: getWebElement.js  getWebElement.ts  index.js
backend/static/styles/: reset.css
backend/templates/: index.html  menu.html
backend/templates/menu/: index.html  render-menu.html
backend/tests/: test_Menu.py
requirements/: dev_requirements.txt  prod_requirements.txt  test_requirements.txt
